# OpenEditableBimFormat

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
docs/: ai-integration-plan.md  performance.md  project-status.md
docs/decisions/: 2026-03-02-curved-path-junction-trim.md  2026-03-02-custom-junction-geometry-authoring.md  2026-03-02-ifc-minimum-entity-set.md  2026-03-02-junction-trim-algorithm.md  2026-03-02-material-library-approach.md  2026-03-02-structural-grid-data-model.md
docs/gemini-handoffs/: issue-71-materials-scene-tree.md  issue-72-ffl-line-full-width.md  issue-79-welcome-dialogue.md
docs/plans/: 2026-02-22-oebf-format-design.md  2026-02-22-oebf-implementation.md  2026-03-02-custom-junction-geometry.md  2026-03-03-macos-file-watching-design.md  2026-03-03-macos-file-watching-implementation.md  2026-03-03-viewer-performance.md  2026-03-07-profile-editor-design.md  2026-03-07-profile-editor-implementation.md  2026-03-07-scene-completeness-and-release.md  2026-03-08-profile-editor-ui-polish.md  (+2 more)
ifc-tools/: README.md  pyproject.toml
ifc-tools/src/oebf/: cli.py  ifc_exporter.py  ifc_importer.py
ifc-tools/tests/: conftest.py  test_cli.py  test_ifc_exporter.py  test_ifc_importer.py  test_llm_harness.py
scripts/: build-library.mjs
spec/: OEBF-GUIDE-template.md
tools/: pack_oebfz.py
viewer/: corner-view.html  demo.html  editor.html  index.html  launch.html  package-lock.json  package.json  playwright.config.js  profile-editor.html  topdown-view.html  viewer.html  vite.config.js
(+152 files in other folders)
