[project]
name = "oebf-ifc-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "ifcopenshell>=0.8.4.post1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
oebf = "oebf.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oebf"]
